# umbreon

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  Taskfile.yml
.github/workflows/: ci.yml
cmake/: umbreonConfig.cmake.in
data/: 1ab0_scene1.inc  1ab0_scene1.pov  1ab0_scene2.inc  1ab0_scene2.pov  1ab0_scene3_denmesh.inc  1ab0_scene3_denmesh.pov  1ab0_scene3_denmesh.qsc  1ab0_scene4_diff_metal.inc  1ab0_scene4_diff_metal.pov  1ab0_scene4_materials.inc  1ab0_scene4_materials.pov  1ab0_scene4_materials.qsc  1ab0_scene4_nolighting.inc  1ab0_scene4_nolighting.pov  1ab0_scene4_toon1.inc  1ab0_scene4_toon1.pov  1ab0_scene4_toon2.inc  1ab0_scene4_toon2.pov  1ab0_scene5_transp.inc  1ab0_scene5_transp.pov  1ab0_scene5_transp.qsc  1ab0_scene5_transp2.inc  1ab0_scene5_transp2.pov  1ab0_scene6_densurf.inc  1ab0_scene6_densurf.pov  1ab0_scene6_densurf.qsc  emissive_csg_test.inc  emissive_csg_test.pov  emissive_test.inc  emissive_test.pov  glossy_test.inc  glossy_test.pov  pbr_test.inc  pbr_test.pov  run_pov.sh  run_transp_frag_ref.sh  run_transp_ref.sh  test1.inc  test1.pov
data/edges/: edge_ribbon1.inc  edge_ribbon1.pov  edge_ribbon2.inc  edge_ribbon2.pov  edge_tube1.inc  edge_tube1.pov
docs/: edges_screen_vector.md  principled_design.md  pt1_design.md  pt1_survey.md  pt1_tuning.md  pt2_survey.md  quality_presets.md  umbreon_cli.md
docs/api/: libumbreon.md
docs/deploy/: cuemol-oidn-worker.md
docs/plans/: PLAN_pt1_integrator.md  README.md  ao-quality.md  ao-soft-shadow.md  edge-analytic-silhouette.md  edge-extraction-embree.md  edge-extraction-screenspace.md  fog-opengl-linear.md  mesh-indexed-refactor.md  oidn-max-memory.md  surface-irradiance-cache-rev2.md  surface-irradiance-cache.md
examples/: CMakeLists.txt  minimal_render.cpp
scripts/: blend_ab.sh  compare_integrators.sh  refactor_check.sh
src/: cli.cpp  cli.hpp  main.cpp  scene.hpp  umbreon.cpp  umbreon.hpp
src/bench/: aov_dump.cpp  aov_dump.hpp  cli.cpp  cli.hpp  main.cpp  material_convert.cpp  material_convert.hpp  modes.cpp  modes.hpp  scene_setup.cpp  scene_setup.hpp  timing_report.cpp  timing_report.hpp
src/bench/geom/: mesh2_block_parser.cpp  mesh2_build.cpp  mesh2_reader.cpp  mesh2_reader_impl.hpp  mesh2_texture_parse.cpp
src/bench/pov/: pov_lexer.cpp  pov_scene_reader.cpp  pov_scene_reader.hpp
src/bench/povexport/: pov_writer.cpp  pov_writer.hpp
src/geom/: mesh2_reader.cpp  mesh2_reader.hpp  scene_builder.cpp  scene_builder.hpp
src/image/: image_io.cpp  image_io.hpp
src/oidn_worker/: main.cpp
src/pov/: pov_lexer.hpp  pov_scene_reader.cpp
src/render/: embree_renderer.cpp  embree_renderer.hpp  render_types.hpp  scene_build.cpp  secondary_rays.hpp  shading.hpp  transparency.hpp
src/umbreon/: scene.hpp  umbreon.cpp  umbreon.hpp
src/umbreon/ao/: ambient_occlusion.hpp  ao_coarse.hpp  ao_shade.hpp  env_dome.hpp
src/umbreon/edges/: analytic_silhouette.cpp  analytic_silhouette.hpp  edge_mesh_bvh.cpp  edge_mesh_bvh.hpp  mesh_feature_edges.cpp  mesh_feature_edges.hpp  mesh_weld.hpp  object_space_edges.cpp  object_space_edges.hpp  screen_edge_classify.cpp  screen_edge_common.hpp  screen_edge_geometry.cpp  screen_edge_prune.cpp  screen_edge_trace.cpp  screen_projection.cpp  screen_projection.hpp  screen_vector_edges.cpp  screen_vector_edges.hpp  stroke_edges.cpp  stroke_edges.hpp  stroke_render.cpp  stroke_render.hpp
src/umbreon/experimental/irradiance_cache/: denoise.hpp  denoise_atrous.cpp  denoise_oidn.cpp  irradiance_build.hpp  irradiance_cache.hpp
src/umbreon/experimental/pt1/: pt1_denoise.cpp  pt1_gather.hpp  pt1_gbuffer.hpp  pt1_integrator.hpp  pt1_upsample.hpp
src/umbreon/experimental/pt2/: pt2_emissive.hpp  pt2_glossy.hpp  pt2_reflect.hpp  pt2_spatial.hpp
src/umbreon/image/: fog.cpp  fog.hpp
src/umbreon/integrator/pt1/: pt1_denoise.cpp  pt1_gather.hpp  pt1_gbuffer.hpp  pt1_integrator.hpp  pt1_upsample.hpp
src/umbreon/integrator/pt2/: pt2_adaptive.hpp  pt2_emissive.hpp  pt2_glossy.hpp  pt2_reflect.hpp  pt2_reservoir.hpp  pt2_sampler.hpp  pt2_spatial.hpp
src/umbreon/ipc/: oidn_client.cpp  oidn_client.hpp  oidn_protocol.hpp  shm_region.hpp
src/umbreon/postprocess/: fog.cpp  fog.hpp  image_ops.cpp  image_ops.hpp
src/umbreon/render/: adaptive_aa.hpp  analytic_silhouette.cpp  analytic_silhouette.hpp  blend_reuse.cpp  blend_reuse.hpp  curve_build.cpp  curve_build.hpp  denoise_atrous.cpp  denoise_oidn.cpp  edge_detect.cpp  edge_detect.hpp  edge_types.hpp  embree_renderer.cpp  embree_renderer.hpp  fog.cpp  fog.hpp  frame_result.hpp  hit_shader.hpp  irradiance_cache.hpp  mesh_feature_edges.cpp  mesh_feature_edges.hpp  mesh_weld.hpp  object_space_edges.cpp  object_space_edges.hpp  pipeline.cpp  pipeline.hpp  progress_cost_model.hpp  progress_slice.hpp  render_options.hpp  render_progress.cpp  render_progress.hpp  render_types.hpp  scene_build.cpp  scene_build.hpp  screen_space_edges.cpp  screen_space_edges.hpp  secondary_rays.hpp  shading.hpp  silhouette_edges.cpp  silhouette_edges.hpp  (+3 more)
src/umbreon/shading/: blend_probe.hpp  hit_shader.hpp  principled.hpp  ray_walk.hpp  secondary_rays.hpp  shading.hpp  transparency.hpp
tests/: CMakeLists.txt  render_test_util.hpp  test_adaptive_aa.cpp  test_ao_coarse.cpp  test_blend_reuse.cpp  test_edge_detect.cpp  test_edge_regression.cpp  test_edge_visibility.cpp  test_edges_default.cpp  test_fog.cpp  test_gi.cpp  test_image_ops.cpp  test_material_convert.cpp  test_math.cpp  test_mesh2_reader.cpp  test_mesh_indexed.cpp  test_object_space_edges.cpp  test_oidn_client_fallback.cpp  test_oidn_denoise.cpp  test_oidn_protocol.cpp  test_oidn_worker_ipc.cpp  test_oidn_worker_respawn.cpp  test_pov_scene_reader.cpp  test_principled.cpp  test_pt1_embree.cpp  test_pt1_gather.cpp  test_pt1_render.cpp  test_pt1_upsample.cpp  test_pt2_render.cpp  test_render.cpp  test_render_ao.cpp  test_render_async.cpp  test_render_edges.cpp  test_render_shading.cpp  test_render_shadows_gi.cpp  test_render_transparency.cpp  test_scene_builder.cpp  test_screen_space_edges.cpp  test_screen_vector_edges.cpp  test_screen_vector_integration.cpp  (+4 more)
